
@startuml

class Endpoint {
	Put (dict, type, sub_type)
	Get (type, sub_type)
}

class Service {
}

class MessageBuffer {
	Persistent message buffer per type:sub-type.
}

class Message {
    Defines a common message structure.
	Serializes dictionaries to JSON.
	De-serializes JSON to dictionaries.
}

class DataExchange {
	Publishes queued messages to the corresponding
	topics.
	Receives messages on subscribed
	topics and queues them.
}

Endpoint "1.."--o "1" DataExchange

DataExchange ..> Message : use

MessageBuffer "1.." -right--* DataExchange

Service "1" ..* "1" Endpoint


@enduml